small reformatting of the css file.

--- a/src/ApiProxy/Content/Site.css
+++ b/src/ApiProxy/Content/Site.css
@@ -3,7 +3,6 @@
     padding-bottom: 20px;
 }
 
-
 body,
 h1, h2, h3, h4, h5, h6,
 input,
@@ -14,23 +13,8 @@ textarea,
     font-family: 'Open Sans', sans-serif;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
-}
-
-
-
-
-
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
@@ -40,20 +24,26 @@ textarea {
     max-width: 280px;
 }
 
+/* Set padding to keep content from hitting the edges */
+.body-content {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+
 .wrap {
     word-wrap: break-word;
     word-break: break-word;
 }
 
 
-
-
 .panel-heading a:after {
     font-family: 'Glyphicons Halflings';
-    content: "\e114";    
-    float: left; 
-    color: #404040; 
+    content: "\e114";
+    float: left;
+    color: #404040;
 }
+
 .panel-heading a.collapsed:after {
     content: "\e080";
 }
