--- a/src/ApiProxy/Views/Shared/_Layout.cshtml
+++ b/src/ApiProxy/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <meta name="description" content="The description of my page" />
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
