--- a/src/ApiProxy/Views/Home/Index.cshtml
+++ b/src/ApiProxy/Views/Home/Index.cshtml
@@ -44,7 +44,14 @@
             </div>
         </div>
     </div>
-    
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="well">
+                <a href="@Url.Action("Index", "ValidateSession")" class="btn btn-info center-block">Validate Session</a>
+            </div>
+        </div>
+    </div>
+
     <div class="panel-group" id="accordion">
         @foreach (var logItem in Model)
         {
