--- a/src/ApiProxy/Views/Shared/_Layout.cshtml
+++ b/src/ApiProxy/Views/Shared/_Layout.cshtml
@@ -37,8 +37,7 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
