added down and dirty js to validate session.

--- a/src/ApiProxy/Views/Shared/_Layout.cshtml
+++ b/src/ApiProxy/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <title>@ViewBag.Title</title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
     <meta name="description" content="The description of my page" />
 </head>
 <body>
@@ -33,7 +32,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Ed-Fi Alliance</p>
         </footer>
     </div>
 
