--- a/src/ApiProxy/Views/Home/Index.cshtml
+++ b/src/ApiProxy/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <div class="well">
-                <a href="@Url.Action("Index", "ValidateSession")" class="btn btn-info center-block">Validate Session</a>
+                <a href="@Url.Action("Index", "ValidateSession", new { id = Model.First().SessionId })" class="btn btn-info center-block">Validate Session</a>
             </div>
         </div>
     </div>
