--- a/src/ApiProxy/Views/Shared/_Layout.cshtml
+++ b/src/ApiProxy/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
             <p class="text-muted">&copy; @(DateTime.Now.Year == 2014 ? "2014" : "2014-" + DateTime.Now.Year) Ed-Fi Alliance, LLC.</p>
         </div>
     </div>
-    <script src="@Url.Content("~/Scripts/require.js")" data-main="@Url.Content("~/scripts/main")"></script>
+    <script src="@Url.Content("~/Scripts/require.js")" data-main="@Url.Content("~/Scripts/main")"></script>
 </body>
 </html>
 
