--- a/src/ApiProxy/app/views/home.html
+++ b/src/ApiProxy/app/views/home.html
@@ -8,7 +8,7 @@
     </div>
     <div class="row form-group">
         <div class="col-md-3">
-            <input type="text" class="form-control" placeholder="session id..." ng-model="searchText" />
+            <input type="text" name="sessionSearch" id="sessionSearch" class="form-control" placeholder="session id..." ng-model="searchText" />
         </div>
         <div class="col-md-2">
             <button type="button" class="btn btn-info" ng-click="searchClick()">Search</button>
@@ -16,76 +16,123 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row" ng-show="sessions.length > 0">
     <div class="row">
 
         <div class="col-md-8  col-md-offset-2">
             <div class="row">
                 <div class="col-md-3 ">
-                    <div class="panel panel-default">
+                    <div class="panel panel-info">
                         <div class="panel-heading text-center"><strong># Requests</strong></div>
                         <div class="panel-body text-center">
-                            #
+                            {{ totalSessions() }}
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 col-md-offset-1 ">
-                    <div class="panel panel-default">
+                    <div class="panel panel-info">
                         <div class="panel-heading text-center"><strong>Session Id</strong></div>
                         <div class="panel-body text-center">
-                            {{ searchText }}
+                            {{ currentSession }}
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-md-offset-1">
-                    <div class="panel panel-default">
+                    <div class="panel panel-info">
                         <div class="panel-heading text-center"><strong># Errors</strong></div>
                         <div class="panel-body text-center">
-                            #
+                            {{ totalErrors() }}
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="row text-center">
+        <a class="btn btn-info" href="#/validate/{{ currentSession }}">Validate Session</a>
+    </div>
+    <br />
+    <div class="panel-group" id="accordian">
+        <div ng-repeat="session in sessions">
+            <div class="panel panel-info">
+                <div class="panel-heading accordion-toggle collapsed" data-toggle="collapse" data-target="#panel_{{ session.Id }}">
+                    <strong>
+                        <span ng-class="getLabel(session.ApiResponse.IsSuccessStatusCode)">
+                            <span ng-class="getIcon(session.ApiResponse.IsSuccessStatusCode)"></span>
+                            &nbsp;
+                            {{ session.ApiRequest.HttpMethod }}
+                        </span>
+                        &nbsp;
+                        {{ urlPath(session.ApiResponse.UriAccessed) }}
+                    </strong>
+                    <span class="pull-right">{{ session.LogDate }}</span>
 
-    <div class="row" ng-repeat="session in sessions">
-
-
-        <div class="panel panel-info">
-            <div class="panel-heading"><span class="label label-success">{{ session.ApiRequest.HttpMethod }}</span> <strong>Transaction: </strong> {{ urlPath(session.ApiResponse.UriAccessed) }} <span class="pull-right">{{ session.LogDate }}</span></div>
-            <div class="panel-body">
-
-
-                <div class="panel panel-warning">
-                    <div class="panel-heading"><strong>Request</strong></div>
-                    <div class="panel-body">
-
-                        <div class="well">
-                            <strong>UriAccessed:</strong>
-                            <br />
-                            {{ session.ApiRequest.UriAccessed }}
-                        </div>
-
-
-                        <pre>{{ session.ApiRequest.BodyContent }}</pre>
-                    </div>
                 </div>
-
-                <div class="panel panel-danger">
-                    <div class="panel-heading"><strong>Response</strong></div>
+                <div id="panel_{{ session.Id }}" class="panel-collapse collapse">
                     <div class="panel-body">
-                        <div class="well">
-                            <strong>UriAccessed:</strong>
-                            <br />
-                            {{ session.ApiResponse.UriAccessed }}
+
+                        <!-- req/ res: This should be ain a template or partial? -->
+                        <div class="panel panel-default">
+                            <div class="panel-heading accordion-toggle collapsed" data-toggle="collapse" data-target="#request_{{ session.Id }}">
+                                <strong>REQUEST</strong>
+                            </div>
+                            <div id="request_{{ session.Id }}" class="panel-collapse collapse ">
+                                <div class="panel-body">
+                                    <strong>
+                                        Uri Accessed
+                                    </strong><br />
+                                    {{ session.ApiRequest.UriAccessed }}
+                                    <br />
+                                    <strong>
+                                        Headers
+                                    </strong>
+                                    <br />
+                                    <ul>
+                                        <li ng-repeat="header in session.ApiRequest.Headers">
+                                            <strong>{{ header.Key }}:</strong> {{ header.Value }}
+                                        </li>
+                                    </ul>
+                                    <strong>
+                                        Body
+                                    </strong>
+                                    <br />
+                                    <pre class="pre-scrollable">{{ session.ApiRequest.BodyContent }}</pre>
+                                </div>
+                            </div>
                         </div>
-                        <pre>{{ session.ApiResponse.BodyContent }}</pre>
+                        <!-- / req/ res -->
+                        <div class="panel panel-default">
+                            <div class="panel-heading accordion-toggle collapsed" data-toggle="collapse" data-target="#response_{{ session.Id }}">
+                                <strong>RESPONSE</strong>
+                            </div>
+                            <div id="response_{{ session.Id }}" class="panel-collapse collapse ">
+                                <div class="panel-body">
+                                    <strong>
+                                        Uri Accessed
+                                    </strong><br />
+                                    {{ session.ApiResponse.UriAccessed }}
+                                    <br />
+                                    <strong>
+                                        Headers
+                                    </strong>
+                                    <br />
+                                    <ul>
+                                        <li ng-repeat="header in session.ApiResponse.Headers">
+                                            <strong>{{ header.Key }}:</strong> {{ header.Value }}
+                                        </li>
+                                    </ul>
+                                    <strong>
+                                        Body
+                                    </strong>
+                                    <br />
+                                    <pre class="pre-scrollable">{{ session.ApiResponse.BodyContent }}</pre>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+            <br />
         </div>
-
     </div>
-
 </div>
